fix mobile readability

--- a/src/components/MainQuiz.css
+++ b/src/components/MainQuiz.css
@@ -34,7 +34,7 @@
         align-items: center;
         justify-content: center;
         padding: 1.2em;
-        font-size: 1em;
+        font-size: 0.6em;
         border-radius: 10em;
         height: 200px;
         width: 30vw;
@@ -42,6 +42,7 @@
         box-shadow: 0 8px 32px 0 rgba(10, 12, 41, 0.3);
         backdrop-filter: blur(4px);
         -webkit-backdrop-filter: blur(4px);
+        font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 
     .question-card {
@@ -63,6 +64,7 @@
         -webkit-backdrop-filter: blur(4px);
         border-radius: 10px;
         color: white;
+        font-size: 0.75em;
         padding: 30px;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
@@ -82,7 +84,7 @@
 }
 
 .main-question {
-    width: 70vw;
+    width: 80vw;
     margin-top: 50px;
     background: rgba(163, 241, 250, 0.25);
     box-shadow: 0 8px 32px 0 rgba(19, 23, 82, 0.3);
@@ -91,6 +93,7 @@
     border-radius: 10px;
     color: white;
     padding: 30px;
+    font-size: 1em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
@@ -110,7 +113,7 @@
     justify-content: center;
     margin: 15px;
     padding: 50px;
-    font-size: 1.2em;
+    font-size: 1em;
     border-radius: 2em;
     min-height: 200px;
     min-width: 40vw;
@@ -120,6 +123,7 @@
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     color: rgb(255, 228, 253);
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
 
